themes/hyde/static/css/hyde.css
/* ... */
.flex-itm .detail + .button {
  font-size: 1em;
  padding: .6em 1.2em;
}

.home .flex-itm img {
  width: 2rem;
  height: 2rem;
  float: left;
  margin: .3em .2em 0 -0.7em;
}

.home .dark-bloc .flex-itm {
  background: none;
  box-shadow: none;
  margin-bottom: .5em;
  max-width: none;
  padding: 0;
}

.home .number {
  font-size: 1.9em;
  vertical-align: text-bottom;
  display: inline-block;
  float: left;
  color: #00adff;
  font-family: 'Ademic', 'Aregular', Arial, sans-serif;
}

.tag {
  display: inline-block;
  background-color: #434343;
  color: #fff;
  font-weight: 300;
  letter-spacing: 0.02rem;
  font-size: .9rem;
  border-radius: .15rem;
  padding: .1rem .35rem;
  margin: 0 .3em .3em 0;
}

.row.mongodb .tag,
.mongodb.tag {
  background-color: #457430;
}

.row.oracle12c .tag,
.oracle12c.tag {
  background-color: #11666b;
}

.row.mssql .tag,
.mssql.tag {
  background-color: #673a79;
}

.row.pgsql .tag,
.pgsql.tag {
  background-color: #7a333d;
}

.report.tag {
  background-color: #7a333d;
}

.row .tag:focus,
.row .tag:hover {
  background-color: #00adff;
}

h1 .tag {
  font-size: 1.1rem;
  vertical-align: middle;
}

.flex-itm .tag {
  margin: .5rem auto;
}

dd a.tag:hover {
  background-color: #00adff;
  color: #fff;
}

dl {
  border: 1px solid #eee;
  border-radius: .2rem;
  background-color: #fff;
  padding: .5rem .5rem 0;
}

dd .stddev {
  font-size: .85rem;
}

.pill {
  border: 1px solid #eee;
  border-radius: .2rem;
  background-color: #fff;
  padding: 0 .3rem 0 0;
  display: inline-block;
  font-size: .85rem;
}

.pill span {
  background-color: #f8f9f9;
  padding: 0 .2rem 0 .3rem;
  margin: 0 .3rem 0 0;
}

.suite {
    position:relative;
    top:-50px;
}

@media (min-width: 48em) {
  .flex-ctn {
  flex-direction: row;
  }
  .post dt, .post dd {
    display: inline-block;
    vertical-align: top;
    min-height: 1.35rem;
  }
  .post dt {
    width: 35%;
    border-right: 2px solid #eee;
    margin-bottom: .5rem;
    background-color: #f6f7f8;
    padding: 0 0 0 .5rem;
  }
  .post dd {
    width: 64%;
  }
}

